finish desktop graphisc

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         </div>
       </header>
       <div class="text-heading">FREE RESOURCES</div>
-      <div class="download">
+      <section class="download">
         <div class="container">
           <div class="download-container">
             <div class="download-content">
-              <h2 class="download-heading">just download it</h2>
+              <h2 class="heading">just download it</h2>
               <p class="download-desc">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
@@ -89,7 +89,165 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
+      <section class="banner">
+        <div class="container">
+          <div class="banner-container">
+            <ul class="banner-list">
+              <li class="banner-item">
+                <div class="banner-item-img">
+                  <img src="./image/img-laptop.png" alt="" />
+                </div>
+                <div class="banner-item-content">
+                  <h3 class="banner-item-heading">high resolution</h3>
+                  <p class="banner-item-desc">
+                    Lorem ipsum dolor sit amet, adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  </p>
+                </div>
+              </li>
+              <li class="banner-item">
+                <div class="banner-item-img">
+                  <img src="./image/img-camera.png" alt="" />
+                </div>
+                <div class="banner-item-content">
+                  <h3 class="banner-item-heading">photography</h3>
+                  <p class="banner-item-desc">
+                    Lorem ipsum dolor sit amet, adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  </p>
+                </div>
+              </li>
+              <li class="banner-item">
+                <div class="banner-item-img">
+                  <img src="./image/img-paster.png" alt="" />
+                </div>
+                <div class="banner-item-content">
+                  <h3 class="banner-item-heading">editable layer</h3>
+                  <p class="banner-item-desc">
+                    Lorem ipsum dolor sit amet, adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  </p>
+                </div>
+              </li>
+              <li class="banner-item">
+                <div class="banner-item-img">
+                  <img src="./image/img-phone.png" alt="" />
+                </div>
+                <div class="banner-item-content">
+                  <h3 class="banner-item-heading">24/7 support</h3>
+                  <p class="banner-item-desc">
+                    Lorem ipsum dolor sit amet, adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  </p>
+                </div>
+              </li>
+              <li class="banner-item">
+                <div class="banner-item-img">
+                  <img src="./image/img-start.png" alt="" />
+                </div>
+                <div class="banner-item-content">
+                  <h3 class="banner-item-heading">powerfull theme</h3>
+                  <p class="banner-item-desc">
+                    Lorem ipsum dolor sit amet, adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  </p>
+                </div>
+              </li>
+              <li class="banner-item">
+                <div class="banner-item-img">
+                  <img src="./image/img-dots.png" alt="" />
+                </div>
+                <div class="banner-item-content">
+                  <h3 class="banner-item-heading">ttv</h3>
+                  <p class="banner-item-desc">
+                    Lorem ipsum dolor sit amet, adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  </p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="feature">
+        <div class="container">
+          <div class="feature-container">
+            <h2 class="heading feature-heading">check our feature</h2>
+            <div class="feature-container">
+              <img src="./image/Our features.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="plans">
+        <div class="container">
+          <div class="plans-container">
+            <h2 class="heading plans-heading">plans</h2>
+            <p class="plans-desc">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat.
+            </p>
+            <div class="plans-list">
+              <div class="plans-item">
+                <h4 class="plans-item-heading">basic plan</h4>
+                <div class="plans-item-wrapper">
+                  <span class="plans-item-current">$</span>
+                  <span class="plans-item-price">25</span>
+                  <span class="plans-item-duration">/mon</span>
+                  <p class="plans-item-desc">Lorem ipsum dolor sit</p>
+                </div>
+              </div>
+              <div class="plans-item">
+                <h4 class="plans-item-heading">professional plan</h4>
+                <div class="plans-item-wrapper">
+                  <span class="plans-item-current">$</span>
+                  <span class="plans-item-price">50</span>
+                  <span class="plans-item-duration">/mon</span>
+                  <p class="plans-item-desc">Lorem ipsum dolor sit</p>
+                </div>
+              </div>
+              <div class="plans-item">
+                <h4 class="plans-item-heading">professional + plan</h4>
+                <div class="plans-item-wrapper">
+                  <span class="plans-item-current">$</span>
+                  <span class="plans-item-price">75</span>
+                  <span class="plans-item-duration">/mon</span>
+                  <p class="plans-item-desc">Lorem ipsum dolor sit</p>
+                </div>
+              </div>
+            </div>
+            <div class="plans-support">
+              <img src="./image/supporter.png" alt="" class="plans-support-men" />
+              <h4 class="plans-support-heading">got question?</h4>
+              <p class="plans-support-desc">
+                Contact our customer support team if You have any further questions. We are here to help You out!
+              </p>
+              <div class="plans-support-contact">
+                <a class="plans-support-contact-link">
+                  <img src="./image/mail.png" alt="" />
+                  <span>support@free.com</span>
+                </a>
+                <a class="plans-support-contact-link">
+                  <img src="./image/telephone.png" alt="" />
+                  <span>+ 48 504 176 933</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer class="footer">
+        <div class="container">
+          <div class="footer-container">
+            <h2 class="heading footer-heading">download this template for free</h2>
+            <p class="footer-desc">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat.
+            </p>
+            <button class="btn btn-downloads">
+              <img src="./image/icon-downloads.png" alt="" />
+              <span>Download</span>
+            </button>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
